--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version-file: 'go.mod'
         cache: true
-      
+    - name: Install golangci-lint
+      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+
     - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v3.2.0
+      run: golangci-lint run --version --verbose --out-format=github-actions
 
     - name: Build
       run: go build -v ./...
