--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,21 +6,20 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
+permissions:
+  contents: read
 
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      uses: actions/setup-go@v3
+    - uses: actions/setup-go@v3
       with:
         go-version-file: 'go.mod'
         cache: true
-    - name: Install golangci-lint
-      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-
-    - name: Run golangci-lint
-      run: golangci-lint run --version --verbose --out-format=github-actions
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
 
     - name: Build
       run: go build -v ./...
