--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  CI: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,11 +17,9 @@ jobs:
     - uses: actions/setup-go@v3
       with:
         go-version-file: 'go.mod'
-    - name: Install golangci-lint
-      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
     - name: Run golangci-lint
-      run: golangci-lint run --version --verbose --out-format=github-actions
+      uses: golangci/golangci-lint-action@v3.2.0
 
     - name: Build
       run: go build -v ./...
