--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,12 +18,19 @@ jobs:
       with:
         go-version-file: 'go.mod'
 
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v3.2.0
-
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
- 
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
+      with:
+        go-version-file: 'go.mod'
+
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v3.2.0
