--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,24 +6,31 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
+env:
+  CI: true
 
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - uses: actions/setup-go@v3
       with:
         go-version-file: 'go.mod'
-        cache: true
-      
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v3.2.0
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
+      with:
+        go-version-file: 'go.mod'
+
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v3.2.0
