--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=github.com/Prastiwar/Go-flow
+sonar.projectKey=Prastiwar_Go-flow
 sonar.projectName=Go-flow
-sonar.organization=Tomasz Piowczyk
+sonar.organization=prastiwar
 
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**
+sonar.exclusions=**/*_test.go, **/vendor/**, **/mocks/**
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
@@ -14,3 +14,4 @@ sonar.links.issue=https://github.com/Prastiwar/Go-flow/issues
 
 sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
+sonar.sourceEncoding=UTF-8
