--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,3 +34,16 @@ jobs:
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v3.2.0
+
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
