--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./... -json -coverprofile=coverage.out > result.json
+      run: go test -v ./... -json -cover -coverprofile=coverage.out > result.json
 
   lint:
     runs-on: ubuntu-latest
