--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./... -json -cover -coverprofile=coverage.out > report.json
+      run: go test -json -coverprofile=coverage.out ./... > report.json
 
   lint:
     runs-on: ubuntu-latest
@@ -38,6 +38,7 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v2
         with:
