--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,6 @@ sonar.links.homepage=https://github.com/Prastiwar/Go-flow
 sonar.links.scm=https://github.com/Prastiwar/Go-flow
 sonar.links.issue=https://github.com/Prastiwar/Go-flow/issues
 
-sonar.go.tests.reportPaths=**/*report.json
-sonar.go.coverage.reportPaths=**/*coverage.out
+sonar.go.tests.reportPaths=report.json
+sonar.go.coverage.reportPaths=coverage.out
 sonar.sourceEncoding=UTF-8
