use upload/download artifact for persisting coverage results

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,15 @@ jobs:
     - name: Test
       run: go test -json -coverprofile=coverage.out ./... > report.json
 
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: code-coverage-report
+        path: |
+          coverage.out
+          report.json
+        if-no-files-found: error
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -43,6 +52,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Download code coverage results
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-report
+          path: |
+            coverage.out
+            report.json
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
