--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,92 +11,56 @@ env:
 
 jobs:
   build:
-    name: Compile and Test
     runs-on: ubuntu-latest
     steps:
-      - name: Clone Repository
-        uses: actions/checkout@master
-      - name: Setup go
-        uses: actions/setup-go@v3
-        with:
-          go-version: '1.19'
-      - run: make test
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v3
-        with:
-          name: code-coverage-report
-          path: bin
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
+      with:
+        go-version-file: 'go.mod'
 
-  sonarCloudTrigger:
-    needs: build
-    name: SonarCloud Trigger
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+	    run: |
+        mkdir -p bin
+        go test -coverprofile=bin/cov.out `go list ./... | grep -v vendor/`
+	      go tool cover -func=bin/cov.out
+
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: code-coverage-report
+        path: bin
+
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone Repository
-        uses: actions/checkout@master
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
+      with:
+        go-version-file: 'go.mod'
+
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v3.2.0
+
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Download code coverage results
         uses: actions/download-artifact@v3
         with:
           name: code-coverage-report
           path: bin
-      - name: Analyze with SonarCloud
-        uses: sonarsource/sonarcloud-github-action@master
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: actions/setup-go@v3
-  #     with:
-  #       go-version-file: 'go.mod'
-
-  #   - name: Build
-  #     run: go build -v ./...
-
-  #   - name: Test
-  #     run: go test -json -coverprofile=coverage.out ./... > report.json
-
-  #   - name: Archive code coverage results
-  #     uses: actions/upload-artifact@v3
-  #     with:
-  #       name: code-coverage-report
-  #       path: |
-  #         coverage.out
-  #         report.json
-  #       if-no-files-found: error
-
-  # lint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: actions/setup-go@v3
-  #     with:
-  #       go-version-file: 'go.mod'
-
-  #   - name: Run golangci-lint
-  #     uses: golangci/golangci-lint-action@v3.2.0
-
-  # sonarcloud:
-  #   name: SonarCloud
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-
-  #     - name: Download code coverage results
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: code-coverage-report
-  #         path: |
-  #           coverage.out
-  #           report.json
-
-  #     - name: SonarCloud Scan
-  #       uses: SonarSource/sonarcloud-github-action@master
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
