--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=Go-flow
 sonar.organization=prastiwar
 
 sonar.sources=.
-sonar.exclusions=**/*_test.go, **/vendor/**, **/mocks/**
+sonar.exclusions=**/*_test.go, **/vendor/**, **/mocks/*
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
@@ -12,6 +12,4 @@ sonar.links.homepage=https://github.com/Prastiwar/Go-flow
 sonar.links.scm=https://github.com/Prastiwar/Go-flow
 sonar.links.issue=https://github.com/Prastiwar/Go-flow/issues
 
-sonar.go.tests.reportPaths=report.json
-sonar.go.coverage.reportPaths=coverage.out
-sonar.sourceEncoding=UTF-8
+sonar.go.coverage.reportPaths=/github/workspace/bin/cov.out
