--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,9 +8,18 @@ on:
 
 env:
   CI: true
+  BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
+  trigger:
+    runs-on: ubuntu-latest
+    if: startsWith(github.head_ref || github.ref_name, 'docs/') == false
+    steps:
+      - name: Trigger
+        run: echo trigger jobs at ${{ env.BRANCH_NAME }} branch
+
   build:
+    needs: trigger
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -35,6 +44,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    needs: trigger
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
